# ai_desktop

./: .gitignore  README.md  main.py  pyproject.toml
core/: constants.py  llm_runtime.py
core/chat/: chat.py  chatbot.py
core/memory/: extraction.py  objectbox-model.json  objectbox_memory.py
intent_recognition_llm/: constants.py  device_controller.py
services/: context_service.py  dispatcher.py  memory_service.py
